added a paragraph tag to the html

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
   <p>The following heading should say "Goodbye":</p>
+  <p> just typing anyting</p>
   <h1 id="pageHeading">Hello!</h1>
 </body>
 
